testsuite/tests/grammar/invalid_lexers/token_action_5.lkt
from common import Example

lexer foo_lexer {
    @ignored @text() Example <- "example"
}
